fixing package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Mozilla VR",
+  "name": "mozilla-vr",
   "version": "1.0.0",
   "description": "Landing Page for vr.mozilla.org",
   "main": "index.js",
