--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "raw-loader": "^0.5.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-syntax-highlighter": "^5.6.2",
     "sass-loader": "^6.0.6",
     "susy": "^3.0.0"
   },
