--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "raw-loader": "^0.5.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-no-ssr": "^1.1.0",
+    "react-scroll-parallax": "^1.0.0-beta.1",
     "react-syntax-highlighter": "^5.6.2",
     "sass-loader": "^6.0.6",
     "susy": "^3.0.0"
