--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "author": "Dan Brown",
   "license": "ISC",
   "dependencies": {
+    "aframe": "^0.6.1",
+    "aframe-react": "^4.3.0",
     "autoprefixer": "7.1.2",
     "babel-eslint": "^7.1.0",
     "babel-plugin-module-resolver": "2.7.1",
@@ -33,8 +35,8 @@
     "postcss-loader": "2.0.6",
     "prop-types": "^15.5.10",
     "raw-loader": "^0.5.1",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
     "react-no-ssr": "^1.1.0",
     "react-scroll-parallax": "^1.0.0-beta.1",
     "react-syntax-highlighter": "^5.6.2",
