--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "dev": "next dev",
     "build": "next build && next export -o dist",
     "start": "next start",
-    "deploy": "npm run build && touch dist/.nojekyll && gh-pages -d dist --dotfiles",
-    "meh": "gh-pages --help"
+    "deploy": "npm run build && touch dist/.nojekyll && gh-pages -d dist --dotfiles"
   },
   "author": "Dan Brown",
   "license": "ISC",
@@ -31,6 +30,7 @@
     "normalize.css": "7.0.0",
     "postcss-easy-import": "2.1.0",
     "postcss-loader": "2.0.6",
+    "postcss-uncss": "^0.15.0",
     "prop-types": "^15.5.10",
     "raw-loader": "^0.5.1",
     "react": "^15.6.1",
@@ -39,7 +39,8 @@
     "react-scroll-parallax": "^1.0.0-beta.1",
     "react-syntax-highlighter": "^5.6.2",
     "sass-loader": "^6.0.6",
-    "susy": "^3.0.0"
+    "susy": "^3.0.0",
+    "uncss": "^0.15.0"
   },
   "devDependencies": {
     "now": "^7.2.4"
