--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "raw-loader": "^0.5.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-modal": "^2.2.2",
     "react-no-ssr": "^1.1.0",
     "react-scroll-parallax": "^1.0.0-beta.1",
     "react-syntax-highlighter": "^5.6.2",
