--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint-plugin-import": "^2.6.1",
     "eslint-plugin-jsx-a11y": "^5.1.1",
     "eslint-plugin-react": "^7.1.0",
+    "exenv": "^1.2.2",
     "gh-pages": "^1.0.0",
     "glob": "7.1.2",
     "mappy-breakpoints": "^0.2.3",
