--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "next dev",
-    "build": "next build && next export -o dist",
+    "build": "next build && next export -o dist && cp CNAME dist",
     "start": "next start",
     "deploy": "npm run build && touch dist/.nojekyll && gh-pages -d dist --dotfiles --repo git@github.com:mozvr/mozvr.github.io.git"
   },
