--- a/package.json
+++ b/package.json
@@ -38,8 +38,7 @@
     "react-dom": "^15.6.1",
     "react-ga": "^2.2.0",
     "react-modal": "^2.2.2",
-    "react-no-ssr": "^1.1.0",
-    "react-scroll-parallax": "^1.0.0-beta.1",
+    "react-scroll-parallax": "^1.1.1",
     "react-syntax-highlighter": "^5.6.2",
     "sass-loader": "^6.0.6",
     "susy": "^3.0.0",
