update dependencies (fixes #22)

--- a/package.json
+++ b/package.json
@@ -13,37 +13,39 @@
   "author": "Dan Brown",
   "license": "ISC",
   "dependencies": {
-    "autoprefixer": "7.1.2",
-    "babel-eslint": "^7.1.0",
-    "babel-plugin-module-resolver": "2.7.1",
-    "babel-plugin-wrap-in-js": "^1.1.0",
-    "eslint": "^3.19.0",
-    "eslint-config-airbnb": "^15.0.2",
-    "eslint-plugin-import": "^2.6.1",
-    "eslint-plugin-jsx-a11y": "^5.1.1",
-    "eslint-plugin-react": "^7.1.0",
+    "autoprefixer": "^7.2.5",
+    "babel-eslint": "^8.2.1",
+    "babel-plugin-module-resolver": "^3.0.0",
+    "babel-plugin-wrap-in-js": "^1.1.1",
+    "eslint": "^4.16.0",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.6.1",
     "exenv": "^1.2.2",
-    "gh-pages": "^1.0.0",
-    "glob": "7.1.2",
+    "gh-pages": "^1.1.0",
+    "glob": "^7.1.2",
     "mappy-breakpoints": "^0.2.3",
-    "next": "^3.0.1-beta.16",
-    "node-sass": "^4.4.0",
-    "normalize.css": "7.0.0",
-    "postcss-easy-import": "2.1.0",
-    "postcss-loader": "2.0.6",
-    "postcss-uncss": "^0.15.0",
-    "prop-types": "^15.5.10",
+    "next": "^4.2.3",
+    "node-sass": "^4.7.2",
+    "normalize.css": "^7.0.0",
+    "postcss-easy-import": "^3.0.0",
+    "postcss-loader": "^2.0.10",
+    "postcss-uncss": "^0.16.1",
+    "prop-types": "^15.6.0",
     "raw-loader": "^0.5.1",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
-    "react-ga": "^2.2.0",
-    "react-modal": "^2.2.2",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-ga": "^2.4.1",
+    "react-modal": "^3.1.11",
     "react-no-ssr": "^1.1.0",
-    "react-scroll-parallax": "^1.0.0-beta.1",
-    "react-syntax-highlighter": "^5.6.2",
+    "react-scroll-parallax": "^1.2.1",
+    "react-syntax-highlighter": "^7.0.0",
     "sass-loader": "^6.0.6",
-    "susy": "^3.0.0",
-    "uncss": "^0.15.0"
+    "stylis": "^3.4.8",
+    "susy": "^3.0.3",
+    "uncss": "^0.16.1",
+    "webpack": "^3.10.0"
   },
   "devDependencies": {
     "now": "^7.2.4"
