--- a/package.json
+++ b/package.json
@@ -13,39 +13,41 @@
   "author": "Dan Brown",
   "license": "ISC",
   "dependencies": {
-    "autoprefixer": "7.1.2",
-    "babel-eslint": "^7.1.0",
-    "babel-plugin-module-resolver": "2.7.1",
+    "aframe": "^0.8.1",
+    "aframe-react": "^4.4.0",
+    "autoprefixer": "^8.2.0",
+    "babel-eslint": "^8.2.2",
+    "babel-plugin-module-resolver": "^3.1.1",
     "babel-plugin-wrap-in-js": "^1.1.0",
-    "eslint": "^3.19.0",
+    "eslint": "^4.19.1",
     "eslint-config-airbnb": "^15.0.2",
-    "eslint-plugin-import": "^2.6.1",
+    "eslint-plugin-import": "^2.10.0",
     "eslint-plugin-jsx-a11y": "^5.1.1",
-    "eslint-plugin-react": "^7.1.0",
+    "eslint-plugin-react": "^7.7.0",
     "exenv": "^1.2.2",
-    "gh-pages": "^1.0.0",
+    "gh-pages": "^1.1.0",
     "glob": "7.1.2",
     "mappy-breakpoints": "^0.2.3",
-    "next": "^3.0.1-beta.16",
-    "node-sass": "^4.4.0",
-    "normalize.css": "7.0.0",
-    "postcss-easy-import": "2.1.0",
-    "postcss-loader": "2.0.6",
-    "postcss-uncss": "^0.15.0",
-    "prop-types": "^15.5.10",
+    "next": "^5.1.0",
+    "node-sass": "^4.8.3",
+    "normalize.css": "^8.0.0",
+    "postcss-easy-import": "^3.0.0",
+    "postcss-loader": "^2.1.3",
+    "postcss-uncss": "^0.16.1",
+    "prop-types": "^15.6.1",
     "raw-loader": "^0.5.1",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
-    "react-ga": "^2.2.0",
-    "react-modal": "^2.2.2",
+    "react": "^16.3.1",
+    "react-dom": "^16.3.1",
+    "react-ga": "^2.4.1",
+    "react-modal": "^3.3.2",
     "react-no-ssr": "^1.1.0",
-    "react-scroll-parallax": "^1.0.0-beta.1",
-    "react-syntax-highlighter": "^5.6.2",
-    "sass-loader": "^6.0.6",
-    "susy": "^3.0.0",
-    "uncss": "^0.15.0"
+    "react-scroll-parallax": "^1.3.3",
+    "react-syntax-highlighter": "^7.0.2",
+    "sass-loader": "^6.0.7",
+    "susy": "^3.0.3",
+    "uncss": "^0.16.2"
   },
   "devDependencies": {
-    "now": "^7.2.4"
+    "now": "^11.0.6"
   }
 }
