--- a/package.json
+++ b/package.json
@@ -6,18 +6,18 @@
   "dependencies": {
     "aframe": "^0.8.2",
     "aframe-react": "^4.4.0",
-    "gatsby": "next",
-    "gatsby-plugin-google-analytics": "^2.0.0-beta.5",
+    "gatsby": "^2.0.0-rc.28",
+    "gatsby-plugin-google-analytics": "^2.0.5",
     "gatsby-plugin-manifest": "next",
     "gatsby-plugin-offline": "next",
     "gatsby-plugin-react-helmet": "next",
-    "gatsby-plugin-sass": "^2.0.0-beta.10",
-    "gh-pages": "^1.2.0",
+    "gatsby-plugin-sass": "^2.0.1",
+    "gh-pages": "^2.0.0",
     "mappy-breakpoints": "^0.2.3",
     "node-sass": "^4.9.3",
     "prop-types": "^15.6.2",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
+    "react": "^16.5.1",
+    "react-dom": "^16.5.1",
     "react-ga": "^2.5.3",
     "react-helmet": "^5.2.0",
     "react-modal": "^3.5.1",
@@ -39,14 +39,14 @@
     "deploy": "npm run build && touch public/.nojekyll && gh-pages -d public --dotfiles --repo git@github.com:mozillareality/mozillareality.github.io.git --branch master"
   },
   "devDependencies": {
-    "babel-eslint": "^8.2.6",
-    "eslint": "^4.19.1",
-    "eslint-config-airbnb": "^17.0.0",
-    "eslint-config-prettier": "^2.9.0",
-    "eslint-plugin-import": "^2.13.0",
+    "babel-eslint": "^9.0.0",
+    "eslint": "^5.6.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-prettier": "^3.0.1",
+    "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-prettier": "^2.6.2",
-    "eslint-plugin-react": "^7.10.0",
+    "eslint-plugin-react": "^7.11.1",
     "prettier": "^1.14.2"
   },
   "repository": {
