--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-no-ssr": "^1.1.0",
     "react-scroll-parallax": "^1.3.5",
     "react-syntax-highlighter": "^8.0.1",
+    "styled-components": "^4.0.2",
     "susy": "^3.0.5"
   },
   "keywords": [
