--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "aframe-react": "^4.4.0",
     "gatsby": "^2.0.0-rc.28",
     "gatsby-plugin-google-analytics": "^2.0.5",
-    "gatsby-plugin-manifest": "next",
-    "gatsby-plugin-offline": "next",
-    "gatsby-plugin-react-helmet": "next",
+    "gatsby-plugin-manifest": "^2.0.24",
+    "gatsby-plugin-offline": "^2.0.25",
+    "gatsby-plugin-react-helmet": "^3.0.10",
     "gatsby-plugin-sass": "^2.0.1",
     "gh-pages": "^2.0.0",
     "mappy-breakpoints": "^0.2.3",
