--- a/package.json
+++ b/package.json
@@ -4,27 +4,27 @@
   "version": "2.0.0",
   "author": "Dan Brown <dbrown@mozilla.com>",
   "dependencies": {
-    "aframe": "^0.8.2",
+    "aframe": "^0.8.0",
     "aframe-react": "^4.4.0",
-    "gatsby": "^2.0.0-rc.28",
-    "gatsby-plugin-google-analytics": "^2.0.5",
+    "gatsby": "^2.2.8",
+    "gatsby-plugin-google-analytics": "^2.0.17",
     "gatsby-plugin-manifest": "^2.0.24",
     "gatsby-plugin-offline": "^2.0.25",
     "gatsby-plugin-react-helmet": "^3.0.10",
-    "gatsby-plugin-sass": "^2.0.1",
-    "gh-pages": "^2.0.0",
+    "gatsby-plugin-sass": "^2.0.11",
+    "gh-pages": "^2.0.1",
     "mappy-breakpoints": "^0.2.3",
-    "node-sass": "^4.9.3",
-    "prop-types": "^15.6.2",
-    "react": "^16.5.1",
-    "react-dom": "^16.5.1",
-    "react-ga": "^2.5.3",
+    "node-sass": "^4.11.0",
+    "prop-types": "^15.7.2",
+    "react": "^16.8.5",
+    "react-dom": "^16.8.5",
+    "react-ga": "^2.5.7",
     "react-helmet": "^5.2.0",
-    "react-modal": "^3.5.1",
+    "react-modal": "^3.8.1",
     "react-no-ssr": "^1.1.0",
     "react-scroll-parallax": "^1.3.5",
     "react-syntax-highlighter": "^8.0.1",
-    "styled-components": "^4.0.2",
+    "styled-components": "^4.1.3",
     "susy": "^3.0.5"
   },
   "keywords": [
@@ -40,15 +40,15 @@
     "deploy": "npm run build && touch public/.nojekyll && gh-pages -d public --dotfiles --repo git@github.com:mozillareality/mozillareality.github.io.git --branch master"
   },
   "devDependencies": {
-    "babel-eslint": "^9.0.0",
-    "eslint": "^5.6.0",
+    "babel-eslint": "^10.0.1",
+    "eslint": "^5.15.3",
     "eslint-config-airbnb": "^17.1.0",
-    "eslint-config-prettier": "^3.0.1",
+    "eslint-config-prettier": "^4.1.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
-    "eslint-plugin-prettier": "^2.6.2",
+    "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "^7.11.1",
-    "prettier": "^1.14.2"
+    "prettier": "^1.16.4"
   },
   "repository": {
     "type": "git",
